--- a/UserIdentitySample.Web/UserIdentitySample.Web.csproj
+++ b/UserIdentitySample.Web/UserIdentitySample.Web.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\UserIdentitySample.ApiService\UserIdentitySample.ApiService.csproj" />
     <ProjectReference Include="..\UserIdentitySample.ServiceDefaults\UserIdentitySample.ServiceDefaults.csproj" />
   </ItemGroup>
